# portpeek

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.claude/skills/codex-review/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  winget.yml
docs/: analytics.md  cli.html  index.html  mcp.md
scripts/: prepare-cli.js
src/: App.svelte  app.css  app.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: analytics.rs  mod.rs  setup.rs  tray.rs  window.rs
src-tauri/src/commands/: mod.rs  ports.rs  settings.rs  window.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/detection/: favicon.rs  framework.rs  mod.rs  project.rs  types.rs
src-tauri/src/domain/ports/: filters.rs  types.rs
src-tauri/src/domain/processes/: types.rs
src-tauri/src/domain/settings/: types.rs
src-tauri/src/infrastructure/: cache.rs  logging.rs  mod.rs  paths.rs
src-tauri/src/platform/windows/: editors.rs  mod.rs  ports.rs  processes.rs
src-tauri/src/state/: app_state.rs
src/lib/: analytics.ts
src/lib/components/layout/: AppShell.svelte  PopupFrame.svelte
src/lib/components/ports/: Favicon.svelte  FrameworkBadge.svelte  (+6 more)
src/lib/stores/: editor.ts  filters.ts  ports.ts  settings.ts
src/lib/tauri/: commands.ts
src/lib/types/: framework.ts  port.ts  settings.ts
src/lib/utils/: constants.ts  format.ts  ports.js  ports.test.mjs
(+10 files in other folders)
